commit via batch

--- a/stm32/Debug/makefile
+++ b/stm32/Debug/makefile
@@ -37,8 +37,8 @@ TrackVehicleControl.list \
 all: TrackVehicleControl.elf secondary-outputs
 
 # Tool invocations
-TrackVehicleControl.elf: $(OBJS) $(USER_OBJS) C:\Users\computer\STM32CubeIDE\workspace_1.0.0\TrackVehicleControl\STM32F103C8TX_FLASH.ld
-	arm-none-eabi-gcc -o "TrackVehicleControl.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\computer\STM32CubeIDE\workspace_1.0.0\TrackVehicleControl\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="TrackVehicleControl.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+TrackVehicleControl.elf: $(OBJS) $(USER_OBJS) C:\Users\computer\Desktop\TrackVehicleControl\stm32\STM32F103C8TX_FLASH.ld
+	arm-none-eabi-gcc -o "TrackVehicleControl.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\computer\Desktop\TrackVehicleControl\stm32\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="TrackVehicleControl.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
